--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "react-init-cli",
   "version": "1.0.0",
-  "description": "react project cli",
+  "description": "create react project cli",
   "main": "index.js",
   "bin": {
-    "react-init-cli": "./bin/cli"
+    "generate-react": "bin/index.js"
   },
+  "license": "MIT",
   "keywords": [
     "creat-react",
     "react",
@@ -16,6 +17,7 @@
     "chalk": "^1.1.3",
     "commander": "^2.9.0",
     "download-git-repo": "^1.0.0",
+    "fs-extra": "^7.0.1",
     "inquirer": "^3.0.6",
     "ora": "^1.2.0"
   }
